# python-advanced-pub

Angaben/Lab-02/musterlösung/: account.py  main.py  special_accounts.py
Angaben/Lab-03/musterlösung/: account.py  main.py
Angaben/Lab-05/musterlösung/: account.py  account_history_iterator.py  main_bonus.py
Angaben/Lab-06/: demo_lc.py
Angaben/Lab-06/musterlösung/: main.py
Angaben/Lab-10/: Angabe.md
Angaben/Lab-12/musterlösung/: Lösung.md
Angaben/Lab-12b/: Angabe.md  openapi.json
Angaben/Lab-12b/musterlösung/: pyproject.toml
Angaben/Lab-12b/musterlösung/banking-app-api-client/: README.md  main.py  pyproject.toml
Angaben/Lab-12b/musterlösung/banking-app-api-client/banking_app_api_client/: __init__.py
Angaben/Lab-12b/musterlösung/banking-app-api-client/banking_app_api_client/api/default/: get_api_account_account_id.py  post_api_account_account_id_transact.py
Angaben/Lab-12b/musterlösung/banking-app-api-client/banking_app_api_client/models/: __init__.py  account.py  transaction.py  transaction_response.py  transaction_type.py
Angaben/Lab-15/: Angabe.md  external_services.py
Angaben/Lab-15/musterlösung/: account.py  test_account.py
Angaben/Lab10/: Angabe.md
Angaben/Lab10/musterlösung/: Lösung.md  account.py  main.py  main_bonus.py
